--- a/JupNot/Fstrings.ipynb
+++ b/JupNot/Fstrings.ipynb
@@ -476,6 +476,39 @@
     "print(f\"|{text:&>20}|\") #  по правому\n",
     "print(f\"|{text:&<20}|\") # по левому краю"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Работа с датой и временем\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "06-09-2022  15:43:58\n"
+     ]
+    }
+   ],
+   "source": [
+    "import datetime\n",
+    "today = datetime.datetime.now()\n",
+    "print(f'{today:%d-%m-%Y  %H:%M:%S}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
