--- a/JupNot/While.ipynb
+++ b/JupNot/While.ipynb
@@ -556,7 +556,15 @@
    "id": "734de794",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Функция возводит в квадрат до тех пор пока квадрат числа не будет меньше или равен заданному числу\n",
+    "def square_gen(n, i = 1): # в качестве парметр принимет число n и счетчик именннованный парметр равный 1\n",
+    "    while i ** 2 <= n:\n",
+    "        yield i ** 2 # на выходу функции получаем объект-генератор\n",
+    "        i += 1\n",
+    "        \n",
+    "print(*square_gen(int(input())), sep='\\n') # Распаковка генератора"
+   ]
   }
  ],
  "metadata": {
