Second_day_holiday-while statement section 4.5 and 4.6

--- a/JupNot/Fstrings.ipynb
+++ b/JupNot/Fstrings.ipynb
@@ -10,7 +10,7 @@
     "\n",
     "#####{имя__поля компонент ! флаг_преобразования : спецификатор_формата}\n",
     "\n",
-    "имя_поля — необязательное число или ключевое слово, идентифицирующее аргумент, которое может быть опущено для применения относительной нумера\u0002ции аргументов в Python 2.7, 3.1 и более поздних версиях.\n",
+    "имя_поля — необязательное число или ключевое слово, идентифицирующее аргумент, которое может быть опущено для применения относительной нумерации аргументов в Python 2.7, 3.1 и более поздних версиях.\n",
     "Глава 7. Фундаментальные основы строк 253 Лутц  Книга 1\n",
     "\n",
     "• компонент — строка из нуля или большего числа ссылок .имя либо [индекс],\n",
@@ -21,9 +21,9 @@
     "ascii соответственно.\n",
     "\n",
     "• спецификатор_формата, если присутствует, начинается с символа :, за которым\n",
-    "следует текст, указывающий, каким образом значение должно быть представлено, в том числе такие детали, как ширина поля, выравнивание, дополнение, де\u0002сятичная точность и т.д., и в конце необязательный код типа данных.\n",
+    "следует текст, указывающий, каким образом значение должно быть представлено, в том числе такие детали, как ширина поля, выравнивание, дополнение, десятичная точность и т.д., и в конце необязательный код типа данных.\n",
     "\n",
-    "Часть спецификатор-формата после символа двоеточия имеет собственный расширенный формат и формально описывается так (квадратные скобки обозначают не\u0002обязательные компоненты и записываться буквально не должны):\n",
+    "Часть спецификатор-формата после символа двоеточия имеет собственный расширенный формат и формально описывается так (квадратные скобки обозначают необязательные компоненты и записываться буквально не должны):\n",
     "\n",
     "#####[[заполнение] выравнивание] [знак] [#] [0] [ширина] [,] [.точность] [код_типа]\n",
     "\n",
@@ -480,7 +480,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('virtLearnPython': venv)",
+   "display_name": "Python 3.9.13 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -494,12 +494,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "60320100e61b6abca5e8fa8813d7fca326eec3cbf4dd3d414f82d819f5069e7b"
+    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
    }
   }
  },
