--- a/JupNot/While.ipynb
+++ b/JupNot/While.ipynb
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 1,
    "id": "1d4b222f-abd1-4177-aa7f-5172b5d5ef4a",
    "metadata": {},
    "outputs": [
@@ -527,7 +527,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 1,
    "id": "bf34e69b",
    "metadata": {},
    "outputs": [
@@ -551,17 +551,43 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "bf133abf",
+   "metadata": {},
+   "source": [
+    "Даны два натуральных числа A и B. Требуется найти их наименьшее общее кратное (НОК). "
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "734de794",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b = [int(i) for i in input().split()]\n",
+    "count = 2\n",
+    "if a > b:\n",
+    "    a, b = b, a\n",
+    "while True:\n",
+    "    if b * count % a == 0:\n",
+    "       print(b * count)\n",
+    "       break\n",
+    "    count += 1"
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('virtLearnPython': venv)",
+   "display_name": "Python 3.9.13 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -575,11 +601,11 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "vscode": {
    "interpreter": {
-    "hash": "60320100e61b6abca5e8fa8813d7fca326eec3cbf4dd3d414f82d819f5069e7b"
+    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
    }
   }
  },
