--- a/JupNot/While.ipynb
+++ b/JupNot/While.ipynb
@@ -583,6 +583,124 @@
     "       break\n",
     "    count += 1"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "47c723fc",
+   "metadata": {},
+   "source": [
+    "Давайте переберем все числа от а до b включительно и будем их выводить на экран, при этом нужно выполнить следующие условия:\n",
+    "\n",
+    "пропускать (не выводить) числа, которые делятся на 2 или на 3\n",
+    "если встречаете число, кратное 777, необходимо принудительно закончить цикл, само это число не выводить"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "id": "f5e740c8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "773\n",
+      "775\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "b = int(input())\n",
+    "count = a \n",
+    "while count <= b:\n",
+    "    if count == 777:\n",
+    "        break\n",
+    "    elif count % 2 == 0 or count % 3 == 0:\n",
+    "        count += 1\n",
+    "    else:\n",
+    "        print(count)\n",
+    "        count += 1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "568d07db",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "a, b = int(input()), int(input()) + 1\n",
+    "while a < b:\n",
+    "    if a == 777:\n",
+    "        break\n",
+    "    if a % 2 and a % 3:# если одно из условий правда печать, если ложь проуск\n",
+    "        print(a)\n",
+    "    a += 1"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "650e59b1",
+   "metadata": {},
+   "source": [
+    "Вам на вход поступает слово и ваша задача в цикле while обойти все его буквы и распечатать их в формате фразы:\n",
+    "\n",
+    "«Текущая буква: <letter>».\n",
+    "\n",
+    "Как только вы встретите строчные английские буквы «e» или «a» нужно вывести фразу «Ага! Нашлась», перестать печатать буквы и принудительно выйти из цикла.\n",
+    "\n",
+    "В случае, если в слове не оказалось букв «e» или «a» необходимо вывести фразу «Распечатали все буквы»"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "2846ffd4",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Текущая буква: p\n",
+      "Текущая буква: h\n",
+      "Текущая буква: r\n",
+      "Ага! Нашлась\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "<>:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9184\\634540256.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if w[i] is 'a' or w[i] is 'e':\n",
+      "C:\\Users\\Admin\\AppData\\Local\\Temp\\ipykernel_9184\\634540256.py:5: SyntaxWarning: \"is\" with a literal. Did you mean \"==\"?\n",
+      "  if w[i] is 'a' or w[i] is 'e':\n"
+     ]
+    }
+   ],
+   "source": [
+    "w = 'phrase'\n",
+    "i = 0\n",
+    "s = []\n",
+    "while i < len(w):\n",
+    "    if w[i] is 'a' or w[i] is 'e':\n",
+    "        print(f\"Ага! Нашлась\")\n",
+    "        break\n",
+    "    else:\n",
+    "        s.append(w[i])\n",
+    "        print(f\"Текущая буква: {w[i]}\")\n",
+    "        i += 1\n",
+    "else:\n",
+    "    print(\"Распечатали все буквы\")\n",
+    "\n"
+   ]
   }
  ],
  "metadata": {
