--- a/JupNot/bool.ipynb
+++ b/JupNot/bool.ipynb
@@ -81,24 +81,25 @@
     "# Операнд \"and\" возвращает первое значение False  или последнее True\n",
     "# Операнд \"or\" возвращает первое True или  последнее False\n",
     "input('Hello world!: ')\n",
-    "```"
+    "```\n",
+    "#### False == 0. Строка, умноженная на 0 = пустое место"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.0 ('virtLearnPython': venv)",
+   "display_name": "Python 3.9.13 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "60320100e61b6abca5e8fa8813d7fca326eec3cbf4dd3d414f82d819f5069e7b"
+    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
    }
   }
  },
