--- a/JupNot/Iterator.ipynb
+++ b/JupNot/Iterator.ipynb
@@ -210,18 +210,18 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.10.7 64-bit ('3.10.7')",
+   "display_name": "Python 3.9.13 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "name": "python",
-   "version": "3.10.7"
+   "version": "3.9.13"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "601dbc9fbd54b376c418ccd1c5d6ef13a87fc317988f704a3a98ec04f90aebd3"
+    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
    }
   }
  },
