--- a/JupNot/Strings.ipynb
+++ b/JupNot/Strings.ipynb
@@ -697,7 +697,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3.9.13 ('env': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -711,13 +711,13 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.0"
+   "version": "3.9.13"
   },
   "toc-autonumbering": true,
   "toc-showcode": true,
   "vscode": {
    "interpreter": {
-    "hash": "20c1fe21645debee36d8e4152e79d4beab4f5df091f9e21e355db43c9b84c467"
+    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
    }
   }
  },
