--- a/JupNot/For_statment.ipynb
+++ b/JupNot/For_statment.ipynb
@@ -438,8 +438,6 @@
     "s = [int(i) for i in input().split()]\n",
     "w = [0] * 201\n",
     "x = []\n",
-    "# print(s)\n",
-    "# print(sort_list)\n",
     "for i in s:\n",
     "    w[i] += 1\n",
     "for i in range(-100, 101):\n",
@@ -483,14 +481,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0\n"
+      "3489675\n"
      ]
     }
    ],
@@ -504,9 +502,162 @@
     "        s += n\n",
     "        x //= 10\n",
     "    if s == 20:\n",
-    "        sum += x\n",
+    "        sum += i\n",
     "print(sum)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3489675\n"
+     ]
+    }
+   ],
+   "source": [
+    "total = 0\n",
+    "for i in range(1000, 10000): # Создаем арифметическую прогрессию чисел от 1000 до 9999. range object\n",
+    "    n = sum([int(x) for x in str(i)])# создаем список из цифр числа i и находим их сумму\n",
+    "    if n == 20:# Если сумма цифр числа i равна 20\n",
+    "        total += i# Тогда прибаляем это число i к переменной total\n",
+    "print(total)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "В этой задаче вам предстоит построить лесенку из чисел. Программа принимает на вход целое положительное число n (n<=15) - количество уровней, ваша задача вывести n уровней, в каждом из которых стоят числа от 1 до значения уровня."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "1 2\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "for i in range(1,n + 1):\n",
+    "    print(*range(1, i + 1))\n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 1 2 3 4\n",
+      "0 1 2 3 4\n",
+      "0 1 2 3 4\n",
+      "0 1 2 3 4\n",
+      "0 1 2 3 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = [ x for x in range(5)]\n",
+    "for i in x:\n",
+    "    print(*x)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Для делимости числа на 11 необходимо, чтобы разность между суммой цифр, стоящих на четных местах, и суммой цифр, стоящих на нечетных местах, делилась на 11.\n",
+    "\n",
+    "Требуется написать программу, которая проверит делимость заданного числа на 11.\n",
+    "\n",
+    "Входные данные\n",
+    "Программа получает на вход одно натуральное число N, делимость которого надо проверить (1 ≤ N ≤ 1010000).\n",
+    "\n",
+    "Выходные данные\n",
+    "Выведите “YES”, если число делится на 11, или “NO” иначе."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "n = [int(i) for i in input()] # создаем список из введенной строки(итерируемый объект) и каждый элемент строки преобразуем к тиру int(i)\n",
+    "print('NO' if (sum(n[0::2])) - (sum(n[1::2])) % 11 else 'YES')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "а вход программе подается строка, состоящая из различных символов: буквы, цифры, знаки препинания и т.д.\n",
+    "\n",
+    "Ваша задача определить сколько символов в данной строке являются цифрами и также найти сумму всех этих цифр. Например, в строке \"Комната 1408\" содержится 4 цифры и их сумма равна 13.\n",
+    "\n",
+    "В качестве ответа необходимо через пробел вывести 2 числа - количество цифр в введенной строке и их сумму"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = [int(i) for i in input() if i.isdigit()]\n",
+    "print(len(a),sum(a))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['C', 'a', 'l', 'o', 't', 'f', 'l', 'o', 'e', 'w', 'i', 't', 's']\n"
+     ]
+    }
+   ],
+   "source": [
+    "st = 'Create a list of the first letters of every word in this string'\n",
+    "s = [word[0] for word in st.split()]\n",
+    "print(s)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
