--- a/JupNot/While.ipynb
+++ b/JupNot/While.ipynb
@@ -565,6 +565,39 @@
     "        \n",
     "print(*square_gen(int(input())), sep='\\n') # Распаковка генератора"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c88181c5",
+   "metadata": {},
+   "source": [
+    "Найти сумму всех делителей числа\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "246d5bc8",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "18\n"
+     ]
+    }
+   ],
+   "source": [
+    "n = int(input())\n",
+    "sum = 1\n",
+    "count = 2\n",
+    "while count <= n:\n",
+    "    if n % count == 0:\n",
+    "        sum += count\n",
+    "    count += 1\n",
+    "print(sum)"
+   ]
   }
  ],
  "metadata": {
