--- a/JupNot/Fstrings.ipynb
+++ b/JupNot/Fstrings.ipynb
@@ -513,7 +513,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('env': venv)",
+   "display_name": "Python 3.10.0 ('virtLearnPython': venv)",
    "language": "python",
    "name": "python3"
   },
@@ -527,12 +527,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
+    "hash": "60320100e61b6abca5e8fa8813d7fca326eec3cbf4dd3d414f82d819f5069e7b"
    }
   }
  },
