--- a/JupNot/For_statment.ipynb
+++ b/JupNot/For_statment.ipynb
@@ -657,7 +657,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.13 ('env': venv)",
+   "display_name": "Python 3.10.0 64-bit ('3.10.0')",
    "language": "python",
    "name": "python3"
   },
@@ -671,12 +671,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.13"
+   "version": "3.10.0"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "713c5f5b1c06c1c09e1e39ce8a970317c0d96c3b2a0e9676cb325435c8df9c5c"
+    "hash": "20c1fe21645debee36d8e4152e79d4beab4f5df091f9e21e355db43c9b84c467"
    }
   }
  },
