--- a/JupNot/dictionary.ipynb
+++ b/JupNot/dictionary.ipynb
@@ -1134,7 +1134,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
@@ -1245,7 +1245,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3.9.2 64-bit",
+   "display_name": "Python 3.10.8 64-bit ('workenv3.10')",
    "language": "python",
    "name": "python3"
   },
@@ -1259,12 +1259,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.2"
+   "version": "3.10.8"
   },
   "orig_nbformat": 4,
   "vscode": {
    "interpreter": {
-    "hash": "916dbcbb3f70747c44a77c7bcd40155683ae19c65e1c03b4aa3499c5328201f1"
+    "hash": "26b4996cd3467b114e8c29eef76c6165ac584fd4bc9cc1c8693779099c4e15d4"
    }
   }
  },
