--- a/JupNot/decorator.ipynb
+++ b/JupNot/decorator.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -40,16 +40,10 @@
     "\n",
     "def sort_list(get_list):\n",
     "    def wrapper_quick_sort(lst):\n",
-    "        #lst = get_list(lst)\n",
-    "        #lst.sort()\n",
-    "        #return lst\n",
-    "        if len(lst) < 2:\n",
-    "            return lst\n",
-    "        else:\n",
-    "            mid = len(lst) // 2 # Выбрали опорный элемент \n",
-    "            less = [i for i in lst[:mid] if i <= lst[mid]] + [i for i in lst[mid + 1:] if i <= lst[mid]]\n",
-    "            greater = [i for i in lst[:mid] if i > lst[mid]] + [i for i in lst[mid + 1:] if i > lst[mid]]\n",
-    "            return wrapper_quick_sort(less) + [lst[mid]] + wrapper_quick_sort(greater)\n",
+    "        lst = get_list(lst)\n",
+    "        lst.sort()\n",
+    "        return lst\n",
+    "        \n",
     "    return wrapper_quick_sort\n",
     "\n",
     "@sort_list\n",
@@ -117,10 +111,63 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.14864246999991337"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "timeit.timeit('a = [8,11,-5,4,3,10]; a.sort()')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0.1252695959999528"
+      ]
+     },
+     "execution_count": 7,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "import timeit\n",
+    "\n",
+    "timeit.timeit(\"\"\"def quick_sort(s):\n",
+    "    if len(s) < 2:\n",
+    "        return s\n",
+    "    else:\n",
+    "        mid = len(s) // 2 # Выбрали опорный элемент \n",
+    "        less = [i for i in s[:mid] if i <= s[mid]] + [i for i in s[mid + 1:] if i <= s[mid]]\n",
+    "        greater = [i for i in s[:mid] if i > s[mid]] + [i for i in s[mid + 1:] if i > s[mid]]\n",
+    "        return quick_sort(less) + [s[mid]] + quick_sort(greater)\"\"\")"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import timeit"
+   ]
   }
  ],
  "metadata": {
