--- a/JupNot/decorator.ipynb
+++ b/JupNot/decorator.ipynb
@@ -162,12 +162,71 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "         5 function calls in 0.000 seconds\n",
+      "\n",
+      "   Ordered by: standard name\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "        1    0.000    0.000    0.000    0.000 1602679508.py:11(bublle_sort)\n",
+      "        1    0.000    0.000    0.000    0.000 <string>:1(<module>)\n",
+      "        1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}\n",
+      "        1    0.000    0.000    0.000    0.000 {built-in method builtins.len}\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
+      "\n",
+      "\n",
+      "         33 function calls (25 primitive calls) in 0.000 seconds\n",
+      "\n",
+      "   Ordered by: standard name\n",
+      "\n",
+      "   ncalls  tottime  percall  cumtime  percall filename:lineno(function)\n",
+      "      9/1    0.000    0.000    0.000    0.000 1602679508.py:2(quick_sort)\n",
+      "        4    0.000    0.000    0.000    0.000 1602679508.py:7(<listcomp>)\n",
+      "        4    0.000    0.000    0.000    0.000 1602679508.py:8(<listcomp>)\n",
+      "        1    0.000    0.000    0.000    0.000 <string>:1(<module>)\n",
+      "        1    0.000    0.000    0.000    0.000 {built-in method builtins.exec}\n",
+      "       13    0.000    0.000    0.000    0.000 {built-in method builtins.len}\n",
+      "        1    0.000    0.000    0.000    0.000 {method 'disable' of '_lsprof.Profiler' objects}\n",
+      "\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "import timeit,cProfile\n",
+    "def quick_sort(s):\n",
+    "    if len(s) < 2:\n",
+    "        return s\n",
+    "    else:\n",
+    "        mid = len(s) // 2 # Выбрали опорный элемент \n",
+    "        less = [i for i in s[:mid] if i <= s[mid]] + [i for i in s[mid + 1:] if i <= s[mid]]\n",
+    "        greater = [i for i in s[:mid] if i > s[mid]] + [i for i in s[mid + 1:] if i > s[mid]]\n",
+    "        return quick_sort(less) + [s[mid]] + quick_sort(greater)\n",
+    "    \n",
+    "def bublle_sort(s):\n",
+    "    n = len(s)\n",
+    "    for bypass in range(1, n): #lДля каждого прохода \n",
+    "        for k in range(0, n-bypass):\n",
+    "            if s[k] > s[k+1]:\n",
+    "                s[k],s[k + 1] = s[k + 1], s[k]\n",
+    "    return s\n",
+    "\n",
+    "cProfile.run('bublle_sort([8, 11, -5, 4, 3, 10])')\n",
+    "cProfile.run('quick_sort([8, 11, -5, 4, 3, 10])')"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "import timeit"
-   ]
+   "source": []
   }
  ],
  "metadata": {
